[package]
name = "stack"
version = "0.1.0"
edition = "2021"

[lib]
name = "stack"
path = "src/lib.rs"

[[bin]]
name = "stack"
path = "src/main.rs"

[[bin]]
name = "par_checker1"
path = "src/examples/par_checker1.rs"

[[bin]]
name = "par_checker2"
path = "src/examples/par_checker2.rs"

[[bin]]
name = "par_checker3"
path = "src/examples/par_checker3.rs"


[[bin]]
name = "divide_by_two"
path = "src/examples/divide_by_two.rs"

[[bin]]
name = "base_converter"
path = "src/examples/base_converter.rs"

[[bin]]
name = "infix_to_postfix"
path = "src/examples/infix_to_postfix.rs"

[[bin]]
name = "postfix_eval"
path = "src/examples/postfix_eval.rs"

[dependencies]

